# collective-cli

./: .gitignore  Cargo.toml  README.md  collective.yaml  example.evidence  members.md  potoc.evidence.schema.json  rust-toolchain.toml  schema.json
.github/workflows/: release.yml  rust.yml
evidence/: 0.evidence  0.html
example/: example.evidence  example.html  join_request.html  join_request.yaml  member_1.yaml  member_2.yaml  template.evidence
example/fellowship/: collective.yaml
example/fellowship/evidence/: 0.evidence  0.html  0.md  example.evidence
example/potoc/: collective.yaml
example/potoc/join_request/: readme.yaml  wirednkod.yml
join_request/: 0.html  0.md  0.yaml  1.yaml  2.html  2.yaml
join_requests/: 0.yaml  1.yaml
schema/: evidence_report.json  join_request.json  potoc.evidence.schema.json  potoc.join_request.schema.json
src/: config.rs  evidence.rs  fellowship.rs  lib.rs  main.rs  member.rs  template.rs  traits.rs
src/cmd/: mod.rs  tests.rs
src/cmd/check/: evidence.rs  join_request.rs  member.rs  mod.rs
src/cmd/index/: evidence.rs  mod.rs
src/cmd/new/: evidence.rs  join_request.rs  member.rs  member_request.rs  mod.rs
src/cmd/render/: evidence.rs  join_request.rs  members.rs  mod.rs
src/cmd/schema/: evidence.rs  join_request.rs  mod.rs
src/collective/: fellowship.rs  mod.rs  potoc.rs
src/prompt/: cache.rs  mod.rs
src/tests/: cli.rs  cli1.rs  cli2.rs  join_request.expect  mod.rs  work_evidence.expect
src/types/: mod.rs  rank.rs  traits.rs  wish.rs
src/types/collective/: id.rs  mod.rs  rank.rs  traits.rs
src/types/evidence/: aggregate.rs  mod.rs  report.rs  traits.rs
src/types/join_request/: aggregate.rs  generic.rs  mod.rs
src/types/member/: aggregate.rs  generic.rs  members.rs  mod.rs  traits.rs
templates/: evidence.html.stpl  evidence.md.stpl  join_request.html.stpl  join_request.md.stpl  members.md.stpl
