[package]
name = "collective"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/fellowship"
description = "A CLI to automate work around Polkadot collective work reports."

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
dirs = "5.0.1"
env_logger = "0.11.2"
glob = "0.3.1"
inquire = { version = "0.6.2", features = ["date"] }
log = "0.4.20"
relative-path = "1.9.2"
sailfish = "0.8.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
serde_yaml = "0.9.31"
symlink = "0.1.0"
valico = { version = "4.0", default-features = false, features = [] }
