[package]
name = "collective"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/fellowship"
description = "A CLI to automate work around Polkadot collective work reports."
include = ["example/*.png"]

[[bin]]
name = "collective"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
backtrace = "0.3.71"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
derivative = "2.2.0"
dirs = "5.0.1"
env_logger = "0.11.3"
glob = "0.3.1"
inquire = { version = "0.7.4", features = ["date"] }
log = "0.4.21"
relative-path = "1.9.2"
sailfish = "0.8.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
symlink = "0.1.0"
tt-call = "1.0.9"
url-escape = "0.1.1"
urlencoding = "2.1.3"
valico = { version = "4.0", default-features = false, features = [] }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
crossterm = "0.27.0"
expectrl = { git = "https://github.com/zhiburt/expectrl", branch = "main" }
failure = "0.1.8"
futures = "0.3.30"
portable-pty = "0.8.1"
pretty_assertions = "1.4"
ptyprocess = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-io = "0.1.13"
tokio-macros = "2.2.0"
tokio-pty-process = "0.4.0"
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
