[package]
name = "collective"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/fellowship"
description = "A CLI to automate work around Polkadot collective work reports."

[[bin]]
name = "collective"
path = "src/bin/collective.rs"

[dependencies]
anyhow = "1.0.86"
backtrace = "0.3.73"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
derivative = "2.2.0"
dirs = "5.0.1"
env_logger = "0.11.3"
glob = "0.3.1"
inquire = { version = "0.7.5", features = ["date"] }
log = "0.4.21"
relative-path = "1.9.3"
sailfish = "0.8.3"
schemars = "0.8.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
symlink = "0.1.0"
tt-call = "1.0.9"
url-escape = "0.1.1"
urlencoding = "2.1.3"
valico = { version = "4.0", default-features = false, features = [] }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
crossterm = "0.27.0"
futures = "0.3.30"
predicates = "3.1.0"
pretty_assertions = "1.4"
